<resources>
    <string name="app_name">BankApp</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="branch">BRUNCH</string>
    <string name="go">GİT</string>
    <string name="address">Toros Mah. Turgut Özal Bulv. 78182 Sokak İlsu Civan Apt. No:2 Çukurova/ADANA 01170</string>
    <string name="code">S1660240</string>
    <string name="deposit_withdraw_money">Para Çek Yatır</string>
    <string name="pozanti_branch">POZANTI ŞUBESİ</string>
    <string name="seyhan">SEYHAN</string>
    <string name="adana">ADANA</string>
    <string name="adana_region">ADANA BÖLGE</string>
    <string name="search">Ara</string>
    <string name="no_branch_found_to_list">Listelenecek Şube Bulunamadı</string>
    <string name="please_check_your_internet">Lütfen İnternet Bağlantınızı Kontrol Ediniz</string>
    <string name="branches">ŞUBELER</string>
</resources>